libreoffice (1:6.4.2~rc1~git20190223-1) UNRELEASED; urgency=medium

  * New upstream snapshot

  * debian/patches/disable-some-sc-tests-with-internal-cppunit.diff:
    cleanup - remove; affected only internal cppunit and stable(-backports)
    already builds with system one
  * debian/rules:
    - package breeze_dark_svg and sifr_dark_svg into the respective
      packages

 -- Rene Engelhard <rene@debian.org>  Sun, 09 Feb 2020 22:39:27 +0100

libreoffice (1:6.4.1~rc2-1) UNRELEASED; urgency=medium

  * New upstream release candidate

  * debian/patches/disable-sc-ScriptOrganizer-test.diff: move ...
  * disable-sc-sw-ScriptOrganizer-test.diff: ... here and also disable it
    for sw; exhibiting on buster-backports
  * debian/patches/make-package-modules-not-suck.diff: add missing comma
    so that libsduilo.so is actually installed into -draw instead of
    -core
  * debian/control.in:
    - make -draw Replaces: -core (<< 1:6.4.1~rc1-3)
    - make -base Pre-Depends: dpkg (>= 1.19.1) (closes: #951149)
  * debian/libreoffice-nlpsolver.bug-script.in: add analogous to
    wiki-publisher
  * debian/libreoffice-ogltrans.bug-script.in: remove ...
  * debian/libreoffice-impress.bug-scrip.in: ... and merge here.

 -- Rene Engelhard <rene@debian.org>  Sun, 09 Feb 2020 22:39:27 +0100

libreoffice (1:6.4.1~rc1-2) unstable; urgency=medium

  * update Replaces: in -help-* to libreoffice-help-common (<< 1:6.4.1~rc1-1)
    (closes: #950833)

 -- Rene Engelhard <rene@debian.org>  Fri, 07 Feb 2020 16:26:56 +0100

libreoffice (1:6.4.1~rc1-1) unstable; urgency=medium

  * New upstream release candidate
    - fixes opengl slide transitions with glm >= 0.9.9 (closes: #917927)

  * debian/patches/no-packagekit-per-default.diff: revert configure revert;
    add configuration item and use it (closes: #950225)
  * debian/patches/debian-vendor.diff: handle Debians vendor correctly, extracted
    from old no-packagekit-per-default.diff

  * debian/rules: