@@ -204,7 +204,7 @@ Build-Conflicts: amd-libopencl1,
 Standards-Version: 4.0.1
 Vcs-Git: https://salsa.debian.org/libreoffice-team/libreoffice/libreoffice.git
 Vcs-Browser: https://salsa.debian.org/libreoffice-team/libreoffice/libreoffice
-Bugs: 
+Bugs: mailto:debian-openoffice@lists.debian.org
 Homepage: http://www.libreoffice.org
 
 Package: libreoffice
@@ -532,8 +532,8 @@ Suggests: fonts-crosextra-caladea,
           libreoffice-base,
           ${java-common-depends},
           ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:5.4.1)
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- word processor
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -569,8 +569,8 @@ Depends: libreoffice-base-core (= ${binary:Version}) [!hppa !mips64 !s390 !sparc
          ${misc:Depends},
          ${shlibs:Depends}
 Suggests: ocl-icd-libopencl1 | mesa-opencl-icd | beignet-opencl-icd
-Replaces: libreoffice-common (<< 1:5.4.1)
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- spreadsheet
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -600,10 +600,11 @@ Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${bi
          libreoffice-draw (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-ogltrans (<< 1:6.1.4-2~)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~),
+          libreoffice-ogltrans (<< 1:6.1.4-2~)
 Conflicts: libreoffice-ogltrans (<< 1:6.1.4-2~)
 Provides: libreoffice-ogltrans
-Breaks: libreoffice-common (<< 1:5.4.1)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Suggests: bluez
 Description: office productivity suite -- presentation
  LibreOffice is a full-featured office productivity suite that provides
@@ -632,10 +633,10 @@ Architecture: alpha amd64 arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreeb
 Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1),
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~),
           libreoffice-core (<< 1:6.4.1~rc1-3),
           libreoffice-impress (<< 1:5.2.0-2)
-Breaks: libreoffice-common (<< 1:5.4.1),
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~),
         libreoffice-core (<< 1:6.4.1~rc1-3),
         libreoffice-impress (<< 1:5.2.0-2)
 Description: office productivity suite -- drawing
@@ -716,7 +717,8 @@ Depends: libreoffice-base-core (= ${binary:Version}),
          ${shlibs:Depends}
 Suggests: libreoffice-report-builder, python3-uno, unixodbc
 Recommends: libreoffice-writer, ${java-common-depends}, ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:4.3.0~beta1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- database
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -4534,6 +4536,8 @@ Depends: libreoffice-core | libreoffice-core-nogui,
          ${report-builder-jar-depends}
 Provides: libreoffice-reportdesigner
 Enhances: libreoffice-base
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
+Replaces: libreoffice-common (<< 1:6.4.2~r~~)
 Description: LibreOffice component for building database reports
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
