@@ -310,8 +310,8 @@ Suggests: fonts-crosextra-caladea,
           libreoffice-base,
           ${java-common-depends},
           ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:5.4.1)
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- word processor
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -347,8 +347,8 @@ Depends: libreoffice-base-core (= ${binary:Version})%OOO_NO_BASE_ARCHS%,
          ${misc:Depends},
          ${shlibs:Depends}
 Suggests: ocl-icd-libopencl1 | mesa-opencl-icd | beignet-opencl-icd
-Replaces: libreoffice-common (<< 1:5.4.1)
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- spreadsheet
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -378,10 +378,10 @@ Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${bi
          libreoffice-draw (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-ogltrans (<< 1:6.1.4-2~)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-ogltrans (<< 1:6.1.4-2~)
 Conflicts: libreoffice-ogltrans (<< 1:6.1.4-2~)
 Provides: libreoffice-ogltrans
-Breaks: libreoffice-common (<< 1:5.4.1)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- presentation
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -408,8 +408,8 @@ Architecture: %OOO_ARCHS%
 Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-core (<< 1:6.4.1~rc1-3), libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:5.4.1)
-Breaks: libreoffice-core (<< 1:6.4.1~rc1-3), libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-core (<< 1:6.4.1~rc1-3), libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-core (<< 1:6.4.1~rc1-3), libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- drawing
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -488,7 +488,8 @@ Suggests: libreoffice-report-builder,
           unixodbc,
           python3-uno
 Recommends: libreoffice-writer, ${java-common-depends}, ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:4.3.0~beta1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- database
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
