@@ -9,6 +9,8 @@ Depends: libreoffice-core | libreoffice-core-nogui,
          ${report-builder-jar-depends}
 Provides: libreoffice-reportdesigner
 Enhances: libreoffice-base
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
+Replaces: libreoffice-common (<< 1:6.4.2~r~~)
 Description: LibreOffice component for building database reports
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
