@@ -6,8 +6,12 @@ libreoffice (1:6.4.2~rc1~git20190223-1) UNRELEASED; urgency=medium
     cleanup - remove; affected only internal cppunit and stable(-backports)
     already builds with system one
   * debian/rules:
+    - move soffice.cfg modules to corresponding packages and remove *.ui
+      in the -nogui packages
     - package breeze_dark_svg and sifr_dark_svg into the respective
       packages
+  * debian/control.in:
+    - update for soffice.cfg moves
 
  -- Rene Engelhard <rene@debian.org>  Sun, 09 Feb 2020 22:39:27 +0100
 
